log
Thu Mar 17 14:22:22 HSP 2022: 
 tests:  0|6
total_score: 0/70
0f13886
Thu Mar 17 14:31:16 HSP 2022: 
 list.c | 36 +++++++++++++++++++++++++++++++-----
 1 file changed, 31 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:19: error: comparison between pointer and integer [-Werror]
   if (!list->head == NULL) return NULL;
                   ^~
list.c: In function 'pushFront':
list.c:75:18: error: comparison between pointer and integer [-Werror]
   if(!list->head == NULL) list->head->prev = nuevo;
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
49a7513
Thu Mar 17 14:33:32 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:22: error: comparison between pointer and integer [-Werror]
   if (!list->current == NULL) return NULL;
                      ^~
list.c: In function 'pushFront':
list.c:75:18: error: comparison between pointer and integer [-Werror]
   if(!list->head == NULL) list->head->prev = nuevo;
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7d51fd7
Thu Mar 17 14:34:28 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8bf1c7a
Thu Mar 17 14:42:42 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
40cfba9
Thu Mar 17 14:45:34 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
37eafeb
Thu Mar 17 14:50:49 HSP 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
b0a3377
Thu Mar 17 14:52:07 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
d2848a8
Thu Mar 17 14:54:37 HSP 2022: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
53999ca
Sat Mar 19 21:35:19 HSP 2022: 
 list.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:18: error: comparison between pointer and integer [-Werror]
   if(!list->tail == NULL){
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1ce9acb
Sat Mar 19 21:37:06 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4507750
Sat Mar 19 21:37:53 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
22ae941
Sat Mar 19 21:39:54 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
4231227
Sat Mar 19 21:41:00 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b9c52c9
Sat Mar 19 21:41:43 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
2b64409
Sat Mar 19 21:44:01 HSP 2022: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|4
total_score: 20/70
f1f264d
Sat Mar 19 21:56:42 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
2d259c9
Sat Mar 19 21:58:51 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
3dabc33
Sat Mar 19 22:01:25 HSP 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
4f0092e
